@@ -68,8 +68,9 @@ if [expr ([istarget "i*86-*-*"] ||  [istarget "x86_64-*-*"]) && [gas_32_check]] 
 	run_dump_test "divide"
     }
 
-
     run_dump_test "padlock"
+    run_dump_test "crx"
+    run_list_test "cr-err" ""
 
     # These tests require support for 8 and 16 bit relocs,
     # so we only run them for ELF and COFF targets.
